unpackaged/main/default/objects/Customer_Reference__c/Customer_Reference__c.object-meta.xml
<CustomObject>
    <label>Customer Reference</label>
    <nameField>
        <displayFormat>Ref-{000000000}</displayFormat>
        <label>Customer Reference Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer References</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>