unpackaged/main/default/objects/Customer_Reference__c/fields/Contact_of_reference__c.field-meta.xml
<CustomField>
    <fullName>Contact_of_reference__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact of reference</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Customer References</relationshipLabel>
    <relationshipName>Customer_References</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>