unpackaged/main/default/objects/Customer_Reference__c/fields/Core_Business__c.field-meta.xml
<CustomField>
    <fullName>Core_Business__c</fullName>
    <label>Core Business</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Line__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Core_Business</valueSetName>
    </valueSet>
</CustomField>