unpackaged/main/default/objects/Customer_Reference__c/fields/Type_of_reference__c.field-meta.xml
<CustomField>
    <fullName>Type_of_reference__c</fullName>
    <label>Type of reference</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Marketing testimonial</fullName>
            </value>
            <value>
                <fullName>Prospect call</fullName>
            </value>
            <value>
                <fullName>Recommendation score</fullName>
            </value>
            <value>
                <fullName>Marketing event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>